# internal/users/dto.go
@@ -1,0 +1,8 @@
+package users
+
+type UserProfile struct {
+	ID          uint64 `json:"id"`
+	Username    string `json:"username"`
+	Email       string `json:"email"`
+	DisplayName string `json:"display_name"`
+}
